# gmail-calendar-sync

./: .dockerignore  .env.debug.example  .env.example  .gcloudignore  .gitignore  .mcp.json  .mypy.ini  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cloudbuild.yaml  get_refresh_token.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy-cloud-run.yml  docker-ci.yml  performance.yml  quality-gate.yml  repo-maintenance.yml  security.yml  stale.yml  sync.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  README.md
docs/examples/configuration/: development.env.example  production.env.example
docs/examples/email-samples/: ana-flight-booking.md  carshare-booking.md
scripts/: clean-dev.sh  setup-dev.sh  test-email-processing.py  validate-config.py
src/: main.py
src/models/: calendar.py  carshare.py  email_types.py  flight.py  openai_metrics.py
src/processors/: base.py  carshare_processor.py  factory.py  flight_processor.py
src/services/: calendar_client.py  gmail_client.py  openai_client.py
src/utils/: __init__.py  config.py  debug.py  email_filter.py  exceptions.py  logging.py  openai_metrics_collector.py
tests/: test_config.py  test_date_range.py  test_email_filter.py  test_exceptions.py  test_logging.py  test_main.py  test_models.py  test_performance.py  test_processors.py
